--- a/frontend/src/components/MagnifiedBox.css
+++ b/frontend/src/components/MagnifiedBox.css
@@ -10,7 +10,7 @@
     font-size: 5vh;
     border-color: #f0f0f01d;
     border-width: 0.05vw;
-    border: 0.05vw solid #000; 
+    border: 0.05vw solid #00000055; 
     justify-content: left; 
     align-items: center; 
     text-align: left; 
@@ -27,6 +27,8 @@
   }
   
   .box::-webkit-scrollbar-track {
+    margin-right: 2vh;
+    margin-left: 2vh;
     background-color: #e7d9f65d; /* track color */
     border-radius: 2vh;
   }
